--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Carousel Template &middot; Bootstrap</title>
+    <title>Fullscreen Bootstrap Carousel &middot; by Ty Rauber</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Fullscreen - 100% width, 100% height - bootstrap carousel that is responsive, animated and maintains image aspect ratio.">
+    <meta name="author" content="Ty Rauber, http://tyrauber.github.io/">
       <link href="stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">
       <link href="stylesheets/carousel.css" rel="stylesheet" media="screen">
     </head>
